# llm-fine-tuning

./: .gitignore  Inference-VLLM.ipynb  LORA-FineTune.ipynb  arcelik_llm_training_set.csv  baseline-inference.py  callback.py  config.toml  data.csv  data.py  dataset.ipynb  dataset.py  lora.py  main.ipynb  pyproject.toml  readme.md  requirements.txt  setup.sh
.ipynb_checkpoints/: requirements-checkpoint.txt
Cosmetics_dataset_0.8/eval/: cache-0e7c54187dc72dfa_00000_of_00002.arrow  cache-0e7c54187dc72dfa_00001_of_00002.arrow  data-00000-of-00001.arrow  state.json
Cosmetics_dataset_0.8/train/: cache-dfa482888830869c_00000_of_00002.arrow  cache-dfa482888830869c_00001_of_00002.arrow  data-00000-of-00001.arrow  state.json
